--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -105,7 +105,7 @@ header .display-menu {
     right: 16px;
     font-size: 18px;
     cursor: pointer;
-    border-radius: 8px;
+    border-radius: 30%;
     box-shadow: 0 2px 5px 0 rgb(213 217 217 / 50%);
     background: #FFD814;
     border: 1px solid #FCD200;
@@ -130,30 +130,32 @@ header .display-menu {
     height: 40px;
 }
 
-.navMenu {
-    position: absolute;
-    top: 2.7rem;
-    right: 7rem;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-    background-color: #FCD200;
-}
 
-.mobileMenu {
-    text-decoration: none;
-    font-size: 20px;
-    margin: 0.2rem;
-    padding: 0.5rem 3rem;
-    text-align: left;
-    min-width: 7rem;
-    height: fit-content;
-    border-radius: 1rem;
-    background: darkorange;
-}
+
 
 @media screen and (max-width : 650px) {
+    
+    .navMenu {
+        position: absolute;
+        top: 2.7rem;
+        right: 4.3rem;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        padding: 0.5rem;
+        background-color: #FCD200;
+    }
+    .mobileMenu {
+        text-decoration: none;
+        font-size: 20px;
+        margin: 0.2rem;
+        padding: 0.5rem 3rem;
+        text-align: left;
+        min-width: 7rem;
+        height: fit-content;
+        border-radius: 1rem;
+        background: darkorange;
+    }
 
     .para {
         display: flex;
@@ -175,6 +177,8 @@ header .display-menu {
 
     .mobMenu {
         display: flex;
+        margin-right: -50px;
+        
     }
 
     .menu {
@@ -182,12 +186,4 @@ header .display-menu {
     }
     
 
-}
-
-.display {
-    justify-content: space-around;
-}
-
-.display-menu {
-    justify-content: space-around;
 }
